--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,22 +1,24 @@
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+<nav class="navbar navbar-expand-lg bg-success ">
   <div class="container-fluid">
-    <a class="navbar-brand" th:href="${'/'}">CANVAS</a>
+    <a class="navbar-brand" th:href="@{'/'}">CRM Система</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link "  th:href="@{'/'}">Home</a>
+          <a class="nav-link "  th:href="@{'/'}">Все заявки</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{'/add-student'}">Add student</a>
+          <a class="nav-link" th:href="@{'/addpage'}">+Добовить заявку</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{'/new'}">Новые заявки</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{'/old'}">Обработанные заявки</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-light" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
